chore: run deno fmt across formatted surfaces

--- a/docs/test-run-2025-10-02.md
+++ b/docs/test-run-2025-10-02.md
@@ -1,10 +1,15 @@
 # Test Run - 2025-10-02
 
 ## Summary
-- Executed the JavaScript/TypeScript linting suite via `npm run lint` for `apps/web`.
+
+- Executed the JavaScript/TypeScript linting suite via `npm run lint` for
+  `apps/web`.
 - Verified type safety with `npm run typecheck`.
-- Ran the full automated test suite with `npm run test` (Deno-based tests and static homepage check).
+- Ran the full automated test suite with `npm run test` (Deno-based tests and
+  static homepage check).
 
 ## Results
+
 - All commands completed successfully with no reported errors.
-- Refer to the CI logs or local command output for detailed timing and download information.
+- Refer to the CI logs or local command output for detailed timing and download
+  information.
